feat:se implemento las tags y selectores css del componente crear-orden

--- a/src/app/hacer-pedido/create-order/create-order.component.html
+++ b/src/app/hacer-pedido/create-order/create-order.component.html
@@ -1,1 +1,28 @@
-<p>create-order works!</p>
+<body>
+<div class="Crear-Pedido">
+    <div class="Crear-Pedido-Content">
+    <div class="Izquierda">
+    <a href="" class="button-Seleccionar-Encomienda">Seleccionar Tipo de Encomienda</a>
+    <div class="Direcciones">
+        <div class="Direccion-Recogida">
+            <h1>Ingresar la direccion de recogida</h1>
+            <input type="text">
+        </div>
+        <div class="Direccion-Entrega">
+            <h1>Ingresar la direccion de entrega</h1>
+            <input type="text">
+        </div>
+    </div>
+    <a href="" class="button-Envio-Express">Activar Envio Express</a>
+    </div>
+    <div class="Derecha">
+        <h1>¿No puede encontrar alguna direccion?</h1>
+        <h2>!Ubiquela en nuestro nuevo mapa interactivo!</h2>
+        <div class="Butones Derecha">
+            <a href="" class="button-Mapa-Interactivo">Entrar al Mapa Interactivo</a>
+            <a href="" class="button-Crear-Pedido">Crear Pedido</a>
+        </div>
+    </div>
+    </div>
+</div>
+</body>
