--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,7 +33,7 @@
 .content-section {
     flex: 1;
     padding: 40px;
-    background-color: #fff;
+    background-color: #FFF9F2;
     display: flex;
     flex-direction: column;
     justify-content: center;
