--- a/src/app/hacer-pedido/create-order/create-order.component.html
+++ b/src/app/hacer-pedido/create-order/create-order.component.html
@@ -2,25 +2,28 @@
 <div class="Crear-Pedido">
     <div class="Crear-Pedido-Content">
     <div class="Izquierda">
-    <a href="" class="button-Seleccionar-Encomienda">Seleccionar Tipo de Encomienda</a>
+        <div class="Title">
+            <h1>Crear Pedido</h1>
+        </div>
+    <a href="javascript:void(0)" (click)="onSelectEncomienda()" class="button-Seleccionar-Encomienda">Seleccionar Tipo de Encomienda</a>
     <div class="Direcciones">
         <div class="Direccion-Recogida">
             <h1>Ingresar la direccion de recogida</h1>
-            <input type="text">
+            <input type="text" [(ngModel)]="order.pickup_address">
         </div>
         <div class="Direccion-Entrega">
             <h1>Ingresar la direccion de entrega</h1>
-            <input type="text">
+            <input type="text" [(ngModel)]="order.shipping_address">
         </div>
     </div>
-    <a href="" class="button-Envio-Express">Activar Envio Express</a>
+    <a href="javascript:void(0)" (click)="onToggleExpressShipping()" class="button-Envio-Express">Activar Envio Express</a>
     </div>
     <div class="Derecha">
         <h1>¿No puede encontrar alguna direccion?</h1>
         <h2>!Ubiquela en nuestro nuevo mapa interactivo!</h2>
         <div class="Butones Derecha">
-            <a href="" class="button-Mapa-Interactivo">Entrar al Mapa Interactivo</a>
-            <a href="" class="button-Crear-Pedido">Crear Pedido</a>
+            <a href="javascript:void(0)" class="button-Mapa-Interactivo">Entrar al Mapa Interactivo</a>
+            <a href="javascript:void(0)" (click)="onSubmitOrder()" class="button-Crear-Pedido">Crear Pedido</a>
         </div>
     </div>
     </div>
