--- a/src/app/hacer-pedido/seleccionar-encomienda/seleccionar-encomienda.component.html
+++ b/src/app/hacer-pedido/seleccionar-encomienda/seleccionar-encomienda.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="Botones-Inferiores">
-        <a href="javascript:void(0)" class="button-Instrucciones-Entrega">Instrucciones de Entrega</a>
+        <a href="javascript:void(0)" class="button-Instrucciones-Entrega" (click)="onInstruccionesEntrega()" >Instrucciones de Entrega</a>
         <a href="javascript:void(0)" class="button-Confirmar">Confirmar</a>
     </div>
     </div>
