fix: se soluciono el problema de las imagenes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,11 +7,11 @@
        <p>La plataforma donde tienes control total sobre tus envíos</p>
        <h2>¡Comienza tu experiencia!</h2>
        <a href="#" class="button google-button">
-           <img src="../../assets/negro.jpg" alt="Google Icon">
+           <img src="..\assets\chad.jpg" alt="Google Icon">
            <span>Continua con Google</span>
        </a>
        <a href="#" class="button correo-button">
-           <img src="../../assets/negro.jpg" alt="Email Icon">
+           <img src="..\assets\google.png" alt="Email Icon">
            <span>Continua con tu correo</span>
        </a>
        <p class="login-link">¿Ya tienes una cuenta? <a href="#">Inicia Sesión</a></p>
