--- a/src/app/hacer-pedido/instrucciones-entrega/instrucciones-entrega.component.html
+++ b/src/app/hacer-pedido/instrucciones-entrega/instrucciones-entrega.component.html
@@ -1,6 +1,13 @@
 <body>
 <div class="Instrucciones-Entrega">
-    <h1>Instrucciones de Entrega</h1>
+  <div class="Header">
+    <div class="Title">
+      <h1>Instrucciones de Entrega</h1>
+    </div>
+    <div class="logo">
+      <img src="..\assets\logo.PNG" alt="">
+    </div>
+  </div>
     <p>Ingrese cualquier indicación o requerimiento específico para la entrega</p>
     <div class="textarea-container">
       <textarea [(ngModel)]="instrucciones" placeholder="Escribe tus instrucciones aquí..."></textarea>
