--- a/src/app/hacer-pedido/seleccionar-encomienda/seleccionar-encomienda.component.css
+++ b/src/app/hacer-pedido/seleccionar-encomienda/seleccionar-encomienda.component.css
@@ -12,23 +12,28 @@ body {
 .Seleccionar-Tipo-Encomienda {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     padding: 20px;
     width: 1440px;
-    /* max-width: 1200px; */
     background-color: #F6A13C;
 }
 
-.Title {
-    align-self: flex-start;
+.Header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .Title h1 {
     color: #1E3A8A;
+    width: 70%;
     font-size: 64px;
     font-weight: 900;
-    margin-bottom: 50px;
-    width: 70%;
+}
+
+.logo img {
+    width: 400px; /* Ajusta el tamaño del logo según sea necesario */
+    height: auto;
 }
 
 .Tipo-Encomiendas {
@@ -36,6 +41,7 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     width: 100%;
+    margin-top: 40px;
     margin-bottom: 20px;
 }
 
@@ -45,18 +51,27 @@ body {
     padding: 20px;
     box-sizing: border-box;
     color: #1E3A8A;
-    width: 582px;
-    height: 212px;
+    display: flex;
+    align-items: center;
     cursor: pointer; /* Cambia el cursor a pointer */
     user-select: none; /* Desactiva la selección de texto */
 }
 
+.encomienda-card img {
+    width: 134px;
+    height: 134px;
+    margin-right: 20px;
+}
+
+.encomienda-card .content {
+    flex: 1;
+}
+
 .encomienda-card h1 {
     font-size: 32px;
-    margin-bottom: 10px;
-    font-weight:700;
+    font-weight: 700;
     text-align: center;
-    margin-bottom: 0px;
+    margin-bottom: 10px;
 }
 
 .encomienda-card p {
@@ -66,58 +81,44 @@ body {
     text-align: justify;
 }
 
-.encomienda-card:hover{
+.encomienda-card:hover {
     background-color: #FBB768;
 }
 
-.Mudanza {
-    grid-column: 1 / span 1;
+.Botones-Inferiores {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
-.Botones-Inferiores {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 55%;
-    /* max-width: 600px; */
-    /* margin-top: 20px; */
+.button-Instrucciones-Entrega,
+.button-Confirmar {
+    display: block;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 20px;
+    font-size: 32px;
+    font-weight: bold;
+    width: 500px;
+    cursor: pointer; /* Cambia el cursor a pointer */
 }
 
 .button-Instrucciones-Entrega {
-    display: block;
-    padding: 20px;
-    margin: 20px;
-    text-align: center;
     background-color: #FFD5A5;
     color: #FFF9F2;
-    text-decoration: none;
-    border-radius: 20px;
-    font-size: 32px;
-    font-weight: bold;
-    width: 500px;
-    height: 40px;
-    align-content: center;
 }
 
-.button-Confirmar{
-    display: block;
-    padding: 20px;
-    margin: 20px;
-    text-align: center;
+.button-Confirmar {
     background-color: #E8E0D7;
     color: #FFF9F2;
-    text-decoration: none;
-    border-radius: 20px;
-    font-size: 32px;
-    font-weight: bold;
-    width: 500px;
-    height: 40px;
-    align-content: center;
 }
 
 .button-Instrucciones-Entrega:hover{
     background-color: #FBB768;
 }
+
 
 /* .button-Confirmar:hover{
     background-color: #FBB768;
