--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -135,6 +135,7 @@ p {
     background-color: #FFA500;
     padding: 20px;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
   }
   
   .profile-selection {
@@ -142,8 +143,15 @@ p {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 600px;
+    width: 96.7%;
+    
+  }
+
+  .right-side {
+    flex: 1;
+    background-color: #FFF9F2;
+    display: flex;
+    flex-direction: column;
   }
   
   .back-button {
@@ -160,6 +168,7 @@ p {
   h2 {
     color: #1E3A8A;
     margin-bottom: 10px;
+    font-family: "Poppins", sans-serif;
   }
   
   p {
@@ -181,6 +190,7 @@ p {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-family: "Poppins", sans-serif;
   }
   
   .profile-option img {
@@ -195,9 +205,13 @@ p {
   }
   
   .profile-option h3 {
+    font-family: "Poppins", sans-serif;
     margin-top: 0;
     margin-bottom: 5px;
     color: #1E3A8A;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
   }
   
   .profile-option p {
