--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Poppins',sans-serif; }
+
+.container{
+    font-family: Poppins, sans-serif;
+}
