--- a/src/app/menus/consumidor/consumidor.component.html
+++ b/src/app/menus/consumidor/consumidor.component.html
@@ -12,7 +12,9 @@
           </div>
         </div>
         <div class="logo-right-side">
-          <img src="../assets/consumidor.png" alt="Profile Picture" class="profile-pic">
+          <button class="image-button" (click)="notificaciones()">
+            <img src="../assets/consumidor.png" alt="Profile Picture" class="profile-pic">
+          </button>
         </div>
       </div>
       
