--- a/src/app/menus/empresa/empresa.component.css
+++ b/src/app/menus/empresa/empresa.component.css
@@ -78,6 +78,17 @@
     border-radius: 80%;
     height: 130px;
   }
+
+  .image-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+  }
+  
+  .image-button img {
+    display: block;
+  }
   
   .buttons {
     width: 100%;
