--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,8 @@
 <-->
 
 <mat-toolbar color="primary">
-    <span class="logo">Encomanage</span>
+    <img src="../assets/logoRe.PNG" alt="Encomanage Logo" class="logo">
+    <!--><span class="logo">Encomanage</span>><-->
 
     <button mat-button routerLink="/home" class="ms-3">
         Inicio
