--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
        <p>La plataforma donde tienes control total sobre tus envíos</p>
        <h2>¡Comienza tu experiencia!</h2>
        <a href="#" class="button google-button">
-           <img src="../../assets/negro.jpg" alt="Google Icon">
+           <img src="../../assets/google.png" alt="Google Icon">
            <span>Continua con Google</span>
        </a>
        <a href="#" class="button correo-button">
