--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,6 +3,6 @@
     <nav class="navbar-nav">
         <a routerLink="/home" routerLinkActive="active">Inicio</a>
         <a routerLink="/hacer-pedido/create-order" routerLinkActive="active">Hacer un pedido</a>
-        <a routerLink="/ver-pedidos" routerLinkActive="active">Ver pedidos</a>
+        <a routerLink="/historial-de-pedidos/historial-menu" routerLinkActive="active">Ver pedidos</a>
     </nav>
 </header>
