Creacion de la estructura del menu ver pedidos

--- a/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
+++ b/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
@@ -1,1 +1,50 @@
-<p>historial-menu works!</p>
+<body>
+<div class="contenedor-principal">
+    <!--Izquierda-->
+    <div class="contenedor-izquierda">
+         <!--Titulo-->
+        <h1 class="titulo">Historial de pedidos</h1>
+        <!--Boton1-->
+        <div>
+            <div>
+                <img src="embudo.jpg" class="foto1">
+                <h1>Filtrar envíos</h1>
+            </div>
+            <h1>-Ordena la lista de envíos</h1>
+        </div>
+        <!--Boton2-->
+        <div>
+            <div>
+                <img src="embudo.jpg" class="foto1">
+                <h1>Filtrar envíos</h1>
+            </div>
+            <h1>-Ordena la lista de envíos</h1>
+        </div>
+        <!--Boton3-->
+        <div>
+            <div>
+                <img src="embudo.jpg" class="foto1">
+                <h1>Filtrar envíos</h1>
+            </div>
+            <h1>-Ordena la lista de envíos</h1>
+        </div>
+    </div>
+     <!--Dereccha-->
+    <div class="contenedor-derecha">
+        <!--Imagen-->
+        <div>
+            <img src="embudo.jpg" class="foto1">
+        </div>  
+        <!--Mensaje-->
+        <div>
+            <img src="embudo.jpg" class="foto1">
+            <h1>Filtrar envíos</h1>
+        </div>
+        <!--Info-->
+        <div>
+            <img src="embudo.jpg" class="foto1">
+            <h1>Filtrar envíos</h1>
+        </div>
+    </div>
+</div>
+</body>
