--- a/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
+++ b/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
@@ -5,28 +5,28 @@
          <!--Titulo-->
         <h1 class="titulo">Historial de pedidos</h1>
         <!--Boton1-->
-        <div>
-            <div>
-                <img src="embudo.jpg" class="foto1">
-                <h1>Filtrar envíos</h1>
+        <div class="boton">
+            <div class="boton-content">
+                <img src="embudo.jpg" class="foto-boton">
+                <h1 class="boton-display-text1">Filtrar envíos</h1>
             </div>
-            <h1>-Ordena la lista de envíos</h1>
+            <h1 class="boton-bottom-text">-Ordena la lista de envíos</h1>
         </div>
         <!--Boton2-->
-        <div>
-            <div>
-                <img src="embudo.jpg" class="foto1">
-                <h1>Filtrar envíos</h1>
+        <div class="boton">
+            <div class="boton-content">
+                <img src="embudo.jpg" class="foto-boton">
+                <h1 class="boton-display-text2">Detalles del envío</h1>
             </div>
-            <h1>-Ordena la lista de envíos</h1>
+            <h1 class="boton-bottom-text">-Mira los detalles del envío seleccionado</h1>
         </div>
         <!--Boton3-->
-        <div>
-            <div>
-                <img src="embudo.jpg" class="foto1">
-                <h1>Filtrar envíos</h1>
+        <div class="boton">
+            <div class="boton-content">
+                <img src="embudo.jpg" class="foto-boton">
+                <h1 class="boton-display-text3">Lista de todos los envíos</h1>
             </div>
-            <h1>-Ordena la lista de envíos</h1>
+            <h1 class="boton-bottom-text">-Selecciona un envío de la lista</h1>
         </div>
     </div>
      <!--Dereccha-->
