--- a/src/app/historial-pedidos/historial-pedidos.component.html
+++ b/src/app/historial-pedidos/historial-pedidos.component.html
@@ -5,12 +5,12 @@
          <!--Titulo-->
         <h1 class="titulo">historial-pedidos</h1>
         <!--Boton1-->
-        <div>
-            <div>
+        <div class="Boton-1">
+            <div class="boton-content">
                 <img src="embudo.jpg" class="foto1">
                 <h1>Filtrar envíos</h1>
             </div>
-            <h1>-Ordena la lista de envíos</h1>
+            <h1 class="boton-bottom-text">-Ordena la lista de envíos</h1>
         </div>
         <!--Boton2-->
         <div>
