--- a/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
+++ b/src/app/historial-de-pedidos/historial-menu/historial-menu.component.html
@@ -32,18 +32,22 @@
      <!--Dereccha-->
     <div class="contenedor-derecha">
         <!--Imagen-->
-        <div>
-            <img src="embudo.jpg" class="foto1">
+        <div class="logo-container">
+            <img src="embudo.jpg" class="logo">
         </div>  
         <!--Mensaje-->
-        <div>
-            <img src="embudo.jpg" class="foto1">
-            <h1>Filtrar envíos</h1>
+        <div class="mensaje-container">
+            <h1 class="mensaje1">Envío Seleccionado</h1>
         </div>
         <!--Info-->
-        <div>
-            <img src="embudo.jpg" class="foto1">
-            <h1>Filtrar envíos</h1>
+        <div class="pedido-boton">
+            <div class="pedido-contenedor">
+                <img src="embudo.jpg" class="pedido-img">
+                <div class="info-text-container">
+                    <h1 class="pedido-mensaje">Por favor seleccione un envío...</h1>
+                    <h1 class="desc-1">Tipo de encomienda: ...</h1>
+                </div>
+            </div>
         </div>
     </div>
 </div>
