Interfaz lista actualizada 100%

--- a/src/app/historial-de-pedidos/filtrar-pedidos/filtrar-pedidos.component.html
+++ b/src/app/historial-de-pedidos/filtrar-pedidos/filtrar-pedidos.component.html
@@ -27,7 +27,7 @@
                 <img src="embudo.jpg" class="pedido-img">
                 <div class="info-text-container">
                     <h1 class="pedido-mensaje">Tipo de Encomienda </h1>
-                    <h1 class="desc-1">puedes buscar tus envios por los diferentes tipos de encomienda. Encomienda de comida, encomienda regular o mudanza. </h1>
+                    <h1 class="desc-1">Puedes buscar tus envios por los diferentes tipos de encomienda. Encomienda de comida, encomienda regular o mudanza. </h1>
                 </div>
             </div>
         </div>
