--- a/src/app/historial-de-pedidos/lista-de-envios/lista-de-envios.component.html
+++ b/src/app/historial-de-pedidos/lista-de-envios/lista-de-envios.component.html
@@ -1,1 +1,33 @@
-<p>lista-de-envios works!</p>
+<body class="main-body">
+    <!--Titulo e imagen-->
+    <div class="titulo-container">
+        <h1 class="titulo">Lista de envíos</h1>
+        <img src="emb.jpg" class="logo">
+    </div>
+    <!--Mensajes-->
+    <div class="mensaje-contador-container">
+        <h1 class="mensaje-total1">Total de envíos realizados: </h1>
+        <h1 class="mensaje-total2"> 0 </h1>
+       
+    </div>
+    <!--Contenedor de seleccion-->
+    <div class="contenedor-seleccionar">
+        <!--Mensaje seleccionar-->
+        <div>
+            <h1 class="mensaje-seleccionar">Seleccione un envío de la lista:</h1>
+        </div>
+        <!--Lista y continuar-->
+        <div class="contenedor-lista-cont">
+            <!--Lista-->
+            <div class="selec-pedido-container">
+                <div>
+                    
+                </div>
+            </div>
+            <!--Continuar-->
+            <div class="mensaje-continuar-container">
+                <h1 class="mensaje-continuar">CONTINUAR</h1>
+            </div>
+        </div>
+    </div>
+</body>
