--- a/src/app/historial-de-pedidos/lista-de-envios/lista-de-envios.component.html
+++ b/src/app/historial-de-pedidos/lista-de-envios/lista-de-envios.component.html
@@ -2,7 +2,7 @@
     <!--Titulo e imagen-->
     <div class="titulo-container">
         <h1 class="titulo">Lista de envíos</h1>
-        <img src="emb.jpg" class="logo">
+        <img src="..\assets\logo.PNG" class="logo">
     </div>
     <!--Mensajes-->
     <div class="mensaje-contador-container">
@@ -25,9 +25,10 @@
                 </div>
             </div>
             <!--Continuar-->
-            <div class="mensaje-continuar-container">
+            
+            <button mat-raised-button class="mensaje-continuar-container"(click)="irAlMenu()">
                 <h1 class="mensaje-continuar">CONTINUAR</h1>
-            </div>
+            </button>
         </div>
     </div>
 </body>
