--- a/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.css
+++ b/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.css
@@ -23,12 +23,14 @@
     font-size: 60px;
 }
 .selec-imagen{
+    padding-top: 20px;
     width: 225px;
     height: 225px;
     border-radius: 20px;
     margin: auto;
 }
 .imagen{
+    
     color: #000000;
     width: 250px;
     height: 225px;
