--- a/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.html
+++ b/src/app/historial-de-pedidos/detalles-del-envio/detalles-del-envio.component.html
@@ -2,24 +2,24 @@
     <div class="titulo-container">
         <h1 class="titulo">Detalles del envío</h1>
         <div class="selec-imagen">
-            <img src="emb.jpg" class="imagen">
+            <img src="..\assets\default.png" class="imagen">
         </div>
     </div>
     <!--Descripcionn y localizacion-->
     <div class="descripcion-localizacion-container">
          <!--Descripcionn-->
         <div class="descripcion-container"> 
-            <h1 class="descripcion-text">Descripcion......</h1>
+            <h1 class="descripcion-text">Por favor seleccione un envío...</h1>
         </div>
         <!--Localizacion-->
         <div class="localizacion-container"> 
             <div class="direccion-recogida"> 
                 <h1 class="recogida-text">Dirección de recogida:</h1>
-                <h1 class="recogida-output">Nansn Ddadamdkwa 10101</h1>
+                <h1 class="recogida-output">Por favor seleccione un envío...</h1>
             </div>
             <div class="direccion-entrega"> 
                 <h1 class="entrega-text">Dirección de entrega:</h1>
-                <h1 class="entrega-output">Ddwad Sadamdkwa 10101</h1>
+                <h1 class="entrega-output">Por favor seleccione un envío...</h1>
             </div>
         </div>
     </div>
