--- a/src/app/historial-de-pedidos/lista-actualizada/lista-actualizada.component.html
+++ b/src/app/historial-de-pedidos/lista-actualizada/lista-actualizada.component.html
@@ -1,8 +1,8 @@
 <body class="main-body">
     <div class="titulo-container">
         <h1 class="titulo">¡Lista actualizada!</h1>
-        <div class="mensaje-container">
+        <button mat-raised-button class="mensaje-container" (click)="irAlMenu()">
             <h1 class="mensaje1">CONTINUAR</h1>
-        </div>
+        </button>
     </div>
 </body>
