--- a/src/app/menus/consumidor/consumidor.component.html
+++ b/src/app/menus/consumidor/consumidor.component.html
@@ -29,6 +29,12 @@
           <img src="../assets/historial.png" alt="Order History"> <span>Historial de pedidos</span>
         </button>
       </div>
+
+      <div class="logout-section">
+        <button mat-raised-button class="logout-button" (click)="logout()">
+            <mat-icon class="color-icon">power_off</mat-icon>Cerrar Sesión
+        </button>
+      </div>
     </div>
   </div>
   
