--- a/src/app/menus/empresa/empresa.component.html
+++ b/src/app/menus/empresa/empresa.component.html
@@ -29,5 +29,11 @@
           <img src="../assets/chats.png" alt="Chats"> <span>Chats con clientes y proveedores</span>
         </button>
       </div>
+
+      <div class="logout-section">
+        <button mat-raised-button class="logout-button" (click)="logout()">
+            <mat-icon class="color-icon">power_off</mat-icon>Cerrar Sesión
+        </button>
+      </div>
     </div>
   </div>
