--- a/src/app/menus/notificaciones/notificaciones.component.html
+++ b/src/app/menus/notificaciones/notificaciones.component.html
@@ -4,7 +4,10 @@
     </div>
     
     <div class="right-side">
-      <h1>Ajustes</h1>
+      <div class="top">
+        <h1>Ajustes</h1>
+        <button mat-raised-button class="logout-button" (click)="volver()">Volver</button>
+      </div>
       
       <form [formGroup]="form">
         <div class="section">
