--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 </header>
 <-->
 
-<mat-toolbar color="primary">
+<mat-toolbar color="primary"  *ngIf="isLoggedIn()">
     <img src="../assets/logoRe.PNG" alt="Encomanage Logo" class="logo">
     <!--><span class="logo">Encomanage</span>><-->
 
