--- a/src/app/user/password/password.component.html
+++ b/src/app/user/password/password.component.html
@@ -29,8 +29,8 @@
                 </mat-error>
             </mat-form-field>
     
-            <button class="confirm-button" mat-raised-button color="primary" [disabled]="!form.valid">
-              Verificar
+            <button class="confirm-button" mat-raised-button color="primary" [disabled]="!form.valid" [ngClass]="{'active': form.valid}">
+              Confirmar
             </button>
           </form>
     </div>
