--- a/src/app/user/password/password.component.css
+++ b/src/app/user/password/password.component.css
@@ -9,7 +9,7 @@ body {
 }
 
 .left-side {
-    background-color: #FFA500;
+    background-color: #F6A13C;
     flex: 1;
     display: flex;
     justify-content: center;
@@ -63,13 +63,22 @@ a:hover {
 .confirm-button {
     margin-top: 20px;
     padding: 15px;
-    background-color: #FFA500;
+    background-color: #F6A13C;
     color: #FFF9F2;
     font-size: 16px;
 }
 
 .confirm-button:hover {
-    background-color: #FFA500;
+    background-color: #F6A13C;
+}
+
+.confirm-button.active {
+    background-color: #F6A13C;
+    color:#FFF9F2;
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
 }
 
 p {
