--- a/src/app/user/verificacion/verificacion.component.html
+++ b/src/app/user/verificacion/verificacion.component.html
@@ -13,7 +13,7 @@
               <mat-error *ngIf="controlHasError('codigo', 'minlength')">Debe tener al menos 4 caracteres</mat-error>
               <mat-error *ngIf="controlHasError('codigo', 'onlyNumbers')">Solo se permiten números</mat-error>
             </mat-form-field>
-            <button class="verification-button" mat-raised-button color="primary" [disabled]="!form.valid">
+            <button class="verification-button" mat-raised-button color="primary" [disabled]="!form.valid" [ngClass]="{'active': form.valid}">
               Verificar
             </button>
           </form>
